--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- <div class="about">Web Developer, Programmer</div> -->
         <div class="moreabout">I am a Web Developer and a Programmer. </div>
         <div class="buttons">
-            <a href="" target="_blank">
+            <a href="https://drive.google.com/drive/folders/1IbMzc8fA5jjvN2J3_IXHGxvsz4uV91PY" target="_blank">
             <button class="btn">Download CV</button></a>
             <a href="/contact.html"><button class="btn">Contact Me</button></a>
         </div>
